@@ -479,6 +479,9 @@ struct globals
     int file_write_interval;
     u_int maxsize_wps_seen;
     int show_wps;
+#ifdef CONFIG_LIBNL
+    int htval;
+#endif
 }
 G;
 
