@@ -40,6 +40,12 @@ int wi_write(struct wif *wi, unsigned char *h80211, int len,
         return wi->wi_write(wi, h80211, len, ti);
 }
 
+int wi_set_ht_channel(struct wif *wi, int chan, unsigned int htval)
+{
+        assert(wi->wi_set_ht_channel);
+        return wi->wi_set_ht_channel(wi, chan, htval);
+}
+
 int wi_set_channel(struct wif *wi, int chan)
 {
         assert(wi->wi_set_channel);
